--- a/Сайт новенького в IT профессии.html
+++ b/Сайт новенького в IT профессии.html
@@ -14,7 +14,9 @@
 <h2>Я Хочу освоить IT профессию</h2>
 <section>Сейчас на даннои этапе, я начинаю изучать верстку страниц, применяя теги, заголовки. На начальном этапе, с минимум знаний это сложновато, но со временем я знаю, что это будет легко и я со всем справлюсь :)
     <p>Надеюсь, что я на этом не остановлюсь и перестану лениться, но плохой опыт это тоже опыт, верно?</p> </section>
-    <section> У меня есть друг Андрей, их у меня даже 3, но я именно про конкретного, который живет в СПБ на данный момент, он будет мне помогать побороть трудности в освоении IT, мой менторчик ЙОПТЕ</section>
+    <section> У меня есть друг Андрей, их у меня даже 3, но я именно про конкретного, который живет в СПБ на данный момент, он будет мне помогать побороть трудности в освоении IT, мой менторчик ЙОПТЕ
+        <p>Сейчас первые проблемы и помощь Андрея, разбираюсь как мне вносить изменения из VScode в gitHub. Ща йобана, падажжи, разберусь.</p>
+    </section>
 </main>
 
 </body>
