--- a/css-practice/Сайт новенького в IT профессии.html
+++ b/css-practice/Сайт новенького в IT профессии.html
@@ -17,6 +17,8 @@
     <p>Надеюсь, что я на этом не остановлюсь и перестану лениться, но плохой опыт это тоже опыт, верно?</p> </section>
     <section> У меня есть друг Андрей, их у меня даже 3, но я именно про конкретного, который живет в СПБ на данный момент, он будет мне помогать побороть трудности в освоении IT, мой менторчик ЙОПТЕ
         <p>Сейчас первые проблемы и помощь Андрея, разбираюсь как мне вносить изменения из VScode в gitHub. Ща йобана, падажжи, разберусь.</p>
+        <li>Сейчас 22.07 1:40</li> 
+        <article>Я подключил стили и теперь весь текст может быть разным по размеру или цвету. Йобана, разобрался почти со всем, flexbox жди меня сучка!!! Оказывается, когда комп не лагает, то можно работать в кайф, а не орать маты через каждый завис компа xD </article>
     </section>
 </main>
 
