--- a/css-practice/Сайт новенького в IT профессии.html
+++ b/css-practice/Сайт новенького в IT профессии.html
@@ -20,6 +20,18 @@
         <li>Сейчас 22.07 1:40</li> 
         <article>Я подключил стили и теперь весь текст может быть разным по размеру или цвету. Йобана, разобрался почти со всем, flexbox жди меня сучка!!! Оказывается, когда комп не лагает, то можно работать в кайф, а не орать маты через каждый завис компа xD </article>
     </section>
+    <!-- Ниже идет освоение flex-container-->
+
+    <li>23/07 21:00 Освоение флекс-контейнеров и верстки</li>
+    <div class="flex-container">
+        <div class="flex-item item-1">Йобана, что у вас тут происходит? Освоение флекс-контейнеров объявляю открытым!!! Я сделал у бокса рамку, чтоб понять принцип работы.</div>
+        <div class="flex-item item-2">Сделал 2 бокс, добавлю ему фон, как 1 боксу, но другой</div>
+        <div class="flex-item item-3">Сделал 3 бокс</div>
+        <div class="flex-item item-4">Cделал 4 бокс</div>
+        <div class="flex-item item-5">Сделал 5 бокс</div>
+        <div class="flex-item item-6">Сделал 6 бокс</div>
+        <div class="flex-item item-7">Сделал 7 бокс</div>
+    </div>
 </main>
 
 </body>
