--- a/css-practice/Сайт новенького в IT профессии.html
+++ b/css-practice/Сайт новенького в IT профессии.html
@@ -35,5 +35,9 @@
 </main>
 
 </body>
-<footer>Здесь будет смешная фотка Андрея или даже двух, но позже</footer>
+<footer>
+    
+   <q>Андрей будет позже</q>
+    
+</footer>
 </html>
