--- a/css-practice/Сайт новенького в IT профессии.html
+++ b/css-practice/Сайт новенького в IT профессии.html
@@ -37,7 +37,8 @@
 </body>
 <footer>
     
-   <q>Андрей будет позже</q>
-    
+   <img src="images/Andrey-lox.jpg" alt="Andrey-lox" width="100">
+   <q>Андрей-Главный ментор в мире</q>
+   
 </footer>
 </html>
